# 3D-Engine-OpenGL

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: IndexBuffer.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  VertexArray.cpp  VertexArray.hpp  VertexBufferLayout.hpp  main.cpp
src/engine/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/math/: Matrix4f.cpp  Matrix4f.hpp  Transformations.cpp  Transformations.hpp  Vector3f.cpp  Vector3f.hpp
src/tests/: Test.hpp  Test2D.cpp  Test2D.hpp  TestClearColor.cpp  TestClearColor.hpp  TestMenu.cpp  TestMenu.hpp
